format_seeds